# libmonad

./: .gitignore  CMakeLists.txt
Tests/: BindTests.cpp  EitherTests.cpp  Examples.cpp  MapTests.cpp  OptionTests.cpp
lib/: Either.h  Option.h
